chore(backend): run OpenRewrite Spring Boot 4.0 migration recipe
Automated migration via org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0:
- Spring Boot 3.5.9 → 4.0.5, MapStruct 1.6.3, SpringDoc 3.0.2
- Starter renames: web→webmvc, aop→aspectj, flyway explicit
- Jackson 2→3 partial migration (annotations still need manual fix)
- Test slice annotation package moves
- Spring annotations: @Nullable/@NonNull → jspecify
- Gradle wrapper 8.14 → 8.14.4
- TestContainers 1.x → 2.0.4

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>